# xxcli

./: .gitignore  CLAUDE.md  DESIGN-PREVIEW.html  DESIGN.md  LICENSE  ONBOARDING-DESIGN-PREVIEW.html  PRODUCT-SENSE.md  README.md  SETUP-WIZARD-CURRENT.html  TODO.md  pyproject.toml
.agents/: PLANS.md
.claude/skills/xx-digest/: SKILL.md
docs/: eng-review-digest.md  test-plan-digest.md
docs/designs/: xx-digest-ceo-plan.md  xx-digest-design.md  xx-digest-dx-review.md
docs/exec-plans/active/: xx-digest-codex-backend.md  xx-digest-v1.md
evals/: eval_digest.py  labeled_tweets.json  xx-feed-20260327.md
src/xxcli/: __init__.py  __main__.py  cli.py  client.py  config.py  context.py  digest.py  feedback.py  format.py  llm.py  onboarding.py  theme.py
tests/: test_config.py  test_context.py  test_digest.py  test_feedback.py  test_format.py
